style: fix navbar z-index

--- a/src/components/searchInput/searchInput.module.scss
+++ b/src/components/searchInput/searchInput.module.scss
@@ -10,7 +10,6 @@
   border-radius: 0.5rem;
   background-color: $bg-gray;
   position: relative;
-  z-index: -1;
 
   input {
     width: 95%;
@@ -23,6 +22,10 @@
     &:focus {
       outline: none;
       color: $main;
+
+      +svg > path {
+        fill: $main;
+      }
     }
 
     &::placeholder {
